# atomscistudio

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.github/workflows/: github-actions-macos.yml  github-actions-ubuntu-deb.yml  github-actions-windows-mingw.yml  github-actions-windows-msvc.yml
src/: main.cpp
src/calc/: calccontrol.cpp  calccontrol.h  leftzone.cpp  leftzone.h  rightzone.cpp  rightzone.h
src/config/: config_manager.cpp  config_manager.h
src/main/: mainwindow.cpp  mainwindow.h
src/modeling/: atomic_color.h  atoms3d.cpp  atoms3d.h  qt3dwindow_custom.cpp  qt3dwindow_custom.h  tools.cpp  tools.h
src/modeling_occ/: modeling.cpp  modeling.h  modeling_tools.cpp  modeling_tools.h  occview.cpp  occview.h
